# Fluidra-DS-Project

./: .gitignore  algorithm.ipynb  algorithm.py  classifier_model.pickle  eda.ipynb  improve_xgboost_classifier.ipynb  interface.py  model.ipynb  model.py  modelo_xgboost.json  modelo_xgboost.pickle  pyproject.toml  scaler.pickle  scaler.pkl  scaler_good_qty.pkl  scaler_theorical_time.pkl  scaler_time_of.pkl  utils.py
